[package]
authors = ["Purple Clay <purpleclaygh@gmail.com>"]
description = "Easily import a GPG key within any CI workflow"
name = "gpg-import"
edition = "2021"
license = "MIT"
version = "0.3.2"

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
git2 = { version = "0.17.2", default-features = false }
hex = "0.4.3"
nom = "7.1.3"
