[package]
authors = ["Purple Clay <purpleclaygh@gmail.com>"]
description = "Easily import a GPG key within any CI workflow"
name = "gpg-import"
edition = "2021"
license = "MIT"
version = "0.4.0"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.0"
chrono = { version = "0.4.31", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.4.8", features = ["derive", "env"] }
git2 = { version = "0.20.0", default-features = false }
hex = "0.4.3"
nom = "8.0.0"
thiserror = "2.0.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
